--- a/complete/Jenkinsfile
+++ b/complete/Jenkinsfile
@@ -1,7 +1,7 @@
 
 pipeline {
     agent {
-        node { label 'ubuntu'}
+        node { label 'master'}
     }
 	stages {
         stage('sample one'){
